package com.example.eventapp.model;

public enum Role {
    MEMBER,
    ORGANIZER,
    ADMIN
}
