%%{init: {'theme': 'neutral'} }%%
classDiagram
direction TB

class UserController {
    <<Controller>>
    -userService: UserService
    +login(username: String, password: String) User
    +signup(username: String, password: String) User
    +getUser(userId: Long) User
    +favoriteOrganizer(memberId: Long, organizerId: Long) void
    +unfavoriteOrganizer(memberId: Long, organizerId: Long) void
    +getFavoriteOrganizers(memberId: Long) List~User~
    +getAttendingEvents(memberId: Long) List~Event~
}

class EventController {
    <<Controller>>
    -eventService: EventService
    +getEvent(eventId: Long) Event
    +getAllEvents() List~Event~
    +searchEventsByDate(date: LocalDate) List~Event~
    +searchEventsByOrganizer(organizerId: Long) List~Event~
    +createEvent(organizerId: Long, event: Event) Event
    +editEvent(organizerId: Long, eventId: Long, event: Event) Event
    +deleteEvent(adminId: Long, eventId: Long) void
    +deleteOwnEvent(organizerId: Long, eventId: Long) void
    +markGoing(memberId: Long, eventId: Long) void
    +cancelGoing(memberId: Long, eventId: Long) void
    +getAttendingMembers(eventId: Long) List~User~
    +publish(userId: Long, eventId: Long) void
    +unpublish(userId: Long, eventId: Long) void
}

class UserService {
    <<Interface>>
    +login(username: String, password: String) User
    +signup(username: String, password: String) User
    +getUser(userId: Long) User
    +favoriteOrganizer(memberId: Long, organizerId: Long) void
    +unfavoriteOrganizer(memberId: Long, organizerId: Long) void
    +getFavoriteOrganizers(memberId: Long) List~User~
    +getAttendingEvents(memberId: Long) List~Event~
}

class EventService {
    <<Interface>>
    +getEvent(eventId: Long) Event
    +getAllEvents() List~Event~
    +searchEventsByDate(date: LocalDate) List~Event~
    +searchEventsByOrganizer(organizerId: Long) List~Event~
    +createEvent(organizerId: Long, event: Event) Event
    +editEvent(organizerId: Long, eventId: Long, event: Event) Event
    +deleteEvent(adminId: Long, eventId: Long) void
    +deleteOwnEvent(organizerId: Long, eventId: Long) void
    +markGoing(memberId: Long, eventId: Long) void
    +cancelGoing(memberId: Long, eventId: Long) void
    +getAttendingMembers(eventId: Long) List~User~
    +publish(userId: Long, eventId: Long) void
    +unpublish(userId: Long, eventId: Long) void
}

class UserServiceImplementation {
    <<Service>>
    -userRepository: UserRepository
    +login(username: String, password: String) User
    +signup(username: String, password: String) User
    +getUser(userId: Long) User
    +favoriteOrganizer(memberId: Long, organizerId: Long) void
    +unfavoriteOrganizer(memberId: Long, organizerId: Long) void
    +getFavoriteOrganizers(memberId: Long) List~User~
    +getAttendingEvents(memberId: Long) List~Event~
}

class EventServiceImplementation {
    <<Service>>
    -eventRepository: EventRepository
    -userRepository: UserRepository
    +getEvent(eventId: Long) Event
    +getAllEvents() List~Event~
    +searchEventsByDate(date: LocalDate) List~Event~
    +searchEventsByOrganizer(organizerId: Long) List~Event~
    +createEvent(organizerId: Long, event: Event) Event
    +editEvent(organizerId: Long, eventId: Long, event: Event) Event
    +deleteEvent(adminId: Long, eventId: Long) void
    +deleteOwnEvent(organizerId: Long, eventId: Long) void
    +markGoing(memberId: Long, eventId: Long) void
    +cancelGoing(memberId: Long, eventId: Long) void
    +getAttendingMembers(eventId: Long) List~User~
    +publish(userId: Long, eventId: Long) void
    +unpublish(userId: Long, eventId: Long) void
}

class UserRepository {
    <<Interface>>
    +findById(userId: Long) Optional~User~
    +findByUsername(username: String) Optional~User~
    +findByRole(role: Role) List~User~
    +save(user: User) User
    +delete(user: User) void
}

class EventRepository {
    <<Interface>>
    +findById(eventId: Long) Optional~Event~
    +findAll() List~Event~
    +findByDate(date: LocalDate) List~Event~
    +findByOrganizer_UserId(organizerId: Long) List~Event~
    +save(event: Event) Event
    +delete(event: Event) void
}

class Role {
    <<Enum>>
    MEMBER
    ORGANIZER
    ADMIN
}

class User {
    <<Entity>>
    -userId: Long
    -username: String
    -image: String
    -description: String
    -role: Role
    -attendingEvents: List~Event~
    -favoriteOrganizers: List~User~
    +Constructor()
    +Getters & Setters()
}

class Event {
    <<Entity>>
    -eventId: Long
    -name: String
    -date: LocalDate
    -startTime: LocalTime
    -location: String
    -description: String
    -tag: String
    -image: String
    -organizer: User
    -published: boolean
    +Constructor()
    +Getters & Setters()
}

UserController --> UserService
EventController --> EventService

UserService <|.. UserServiceImplementation
EventService <|.. EventServiceImplementation

UserServiceImplementation --> UserRepository
EventServiceImplementation --> EventRepository
EventServiceImplementation --> UserRepository

User --> Role

Event --> User
User --> "0..*" Event
User --> "0..*" User 
